# mosaic-picture

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  photomosaic.py  pyproject.toml  requirements.txt  vercel.json  web_app.py
static/: app.js  styles.css
templates/: index.html
